moved the canvas above script tags. active object is monkey

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <!-- <script src="testObjects/cube.js"></script> -->
-    <!-- <script src="testObjects/monke.js"></script> -->
-    <script src="testObjects/blob.js"></script>
-    <script src="import.js"></script>
     <canvas width="1000" height="800" id="c"></canvas>
+    <!-- <script src="testObjects/cube.js"></script> -->
+    <script src="testObjects/monke.js"></script>
+    <!-- <script src="testObjects/blob.js"></script> -->
+    <script src="import.js"></script>
     <script src="drawing.js"></script>
     <script src="make.js"></script>
     <script src="rotate.js"></script>
