Added major scene and render system. Also added a primitive navigation system. Small changes to other files to account for the new system

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 
 <body>
     <canvas width="1000" height="800" id="c"></canvas>
-    <!-- <script src="testObjects/cube.js"></script> -->
+    <script src="testObjects/cube.js"></script>
     <script src="testObjects/monke.js"></script>
-    <!-- <script src="testObjects/blob.js"></script> -->
+    <script src="testObjects/blob.js"></script>
+    <script src="scale.js"></script>
     <script src="import.js"></script>
     <script src="drawing.js"></script>
     <script src="make.js"></script>
     <script src="rotate.js"></script>
     <script src="translate.js"></script>
     <script src="intersections.js"></script>
+    <script src="scene.js"></script>
     <script src="render.js"></script>
+    <script src="testing.js"></script>
 </body>
 </body>
 
