Added a default grid. Fixed the rotate point function to handle when the point to rotate is the same as origin. Added functionality for wireframe in the objects, and scene, then added a listener for the z key to toggle it.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
 <body>
     <canvas width="1000" height="800" id="c"></canvas>
-    <script src="testObjects/cube.js"></script>
-    <script src="testObjects/monke.js"></script>
-    <script src="testObjects/blob.js"></script>
+    <script src="savedObjects/dude.js"></script>
+    <script src="savedObjects/grid.js"></script>
+    <script src="savedObjects/newblob.js"></script>
+    <script src="savedObjects/cube.js"></script>
+    <script src="savedObjects/monke.js"></script>
+    <script src="savedObjects/blob.js"></script>
     <script src="scale.js"></script>
     <script src="import.js"></script>
     <script src="drawing.js"></script>
