Moved all input events to it's own file.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="intersections.js"></script>
     <script src="scene.js"></script>
     <script src="render.js"></script>
+    <script src="events.js"></script>
     <script src="testing.js"></script>
 </body>
 </body>
