Added tree object.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <canvas width="1000" height="800" id="c"></canvas>
     <script src="savedObjects/dude.js"></script>
+    <script src="savedObjects/tree.js"></script>
     <script src="savedObjects/grid.js"></script>
     <script src="savedObjects/newblob.js"></script>
     <script src="savedObjects/cube.js"></script>
